--- a/css/style.css
+++ b/css/style.css
@@ -39,19 +39,22 @@ nav a:hover {
     
   
   }
+  .nav2-hover:hover {
+    color:  #BF994D;
+  }
   /* about sec */
   .about-sec {
     background-color: rgb(0, 0, 0);
     width: 100%;
 
   }
-  .about-header {
+  .about-header{
     color: #BF994D;
     
     font-family: "Apercu Pro Mono";
     text-align: center;
   }
-  .about-content {
+  .about-content{
     color: white;
     opacity: 85%;
     font-family: 'Baskervville', serif;
@@ -82,9 +85,11 @@ img{
 
 
 /* services */
-.services {
-  
-  
+.h5 {
+  font-family: "Apercu Pro Mono";
+}
+.p {
+  font-family: 'Baskervville', serif;
 }
 /* contact */
 .contact-sec {
@@ -156,11 +161,29 @@ img{
   color: #f39c12;
 }
 
-
+.back-to-top-link {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  line-height: 3rem;
+  text-align: center;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  color: #BF994D;
+  /* emoji don't behave like regular fonts
+     so this helped position it correctly */
+  padding: 0.25rem;
+}
 
 @media (max-width: 768px) {
-  .navbar {
-    background: black;
-    opacity: 70%;
+  .navbar { 
+    position: fixed;
   }
+  .navbar-collapse {
+    background-color: black;
+    opacity: 75%;
+    
+    
+  
 }
